이미지 title 수정

--- a/contents/index.html
+++ b/contents/index.html
@@ -94,8 +94,7 @@
                 <h4>DEAN</h4>
                 <p>DEAN, 130 mood TRBL</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="DEAN"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -108,7 +107,7 @@
                 <h4>Fujii Kaze</h4>
                 <p>Nan-Nan</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fujii Kaze"><i class="bx bx-plus"></i></a>
                   <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -122,8 +121,7 @@
                 <h4>Official髭男dism</h4>
                 <p>-pretender -universe</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Official髭男dism"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -136,8 +134,7 @@
                 <h4>Beyonce</h4>
                 <p>Lemonade</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Beyonce"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -150,8 +147,7 @@
                 <h4>Billie Eilish</h4>
                 <p>-my future -Bellyache -wish you were gay -come out and play -Oceans Eyes</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Billie Eilish"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -164,8 +160,7 @@
                 <h4>ZUTOMAYO</h4>
                 <p>STUDY ME</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ZUTOMAYO"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -178,8 +173,7 @@
                 <h4>Silk Sonic</h4>
                 <p>-Skate -Leave the Door Open</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Silk Sonic"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -192,8 +186,7 @@
                 <h4>Vaundy</h4>
                 <p>Tokyo Flash</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Vaundy"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -206,8 +199,7 @@
                 <h4>도쿄지헨</h4>
                 <p>-마루노우치 새디스틱 -오늘 밤은 헛소동</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="도쿄지헨"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -220,8 +212,7 @@
                 <h4>Eve</h4>
                 <p>문화</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Eve"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -234,8 +225,7 @@
                 <h4>안전지대</h4>
                 <p>사랑의 예감</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="안전지대"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -248,8 +238,7 @@
                 <h4>백예린</h4>
                 <p>Every letter I sent you</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="백예린"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -262,8 +251,7 @@
                 <h4>원령공주</h4>
                 <p>미야자키 하야오</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="원령공주"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -276,8 +264,7 @@
                 <h4>고양이의 보은</h4>
                 <p>모리타 히로유키</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="고양이의 보은"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -290,8 +277,7 @@
                 <h4>센과 치히로의 행방불명</h4>
                 <p>미야자키 하야오</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="센과 치히로의 행방불명"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -304,8 +290,7 @@
                 <h4>시간을 달리는 소녀</h4>
                 <p>호소다 마모루</p>
                 <div class="portfolio-links">
-                  <a href="../Kelly/assets/img/portfolio/portfolio-16.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="../Kelly/portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="../Kelly/assets/img/portfolio/portfolio-16.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="시간을 달리는 소녀"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
