--- a/contents/index.html
+++ b/contents/index.html
@@ -92,7 +92,7 @@
               <img src="../Kelly/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>DEAN</h4>
-                <p>DEAN, 130 mood TRBL</p>
+                <p>130 mood TRBL</p>
                 <div class="portfolio-links">
                   <a href="../Kelly/assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="DEAN"><i class="bx bx-plus"></i></a>
                 </div>
@@ -119,7 +119,7 @@
               <img src="../Kelly/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Official髭男dism</h4>
-                <p>-pretender -universe</p>
+                <p>pretender, universe, 115만킬로의 필름</p>
                 <div class="portfolio-links">
                   <a href="../Kelly/assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Official髭男dism"><i class="bx bx-plus"></i></a>
                 </div>
@@ -145,7 +145,7 @@
               <img src="../Kelly/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Billie Eilish</h4>
-                <p>-my future -Bellyache -wish you were gay -come out and play -Oceans Eyes</p>
+                <p>my future, Bellyache, wish you were gay, come out and play, Oceans Eyes</p>
                 <div class="portfolio-links">
                   <a href="../Kelly/assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Billie Eilish"><i class="bx bx-plus"></i></a>
                 </div>
@@ -171,7 +171,7 @@
               <img src="../Kelly/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Silk Sonic</h4>
-                <p>-Skate -Leave the Door Open</p>
+                <p>Skate, Leave the Door Open</p>
                 <div class="portfolio-links">
                   <a href="../Kelly/assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Silk Sonic"><i class="bx bx-plus"></i></a>
                 </div>
@@ -197,7 +197,7 @@
               <img src="../Kelly/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>도쿄지헨</h4>
-                <p>-마루노우치 새디스틱 -오늘 밤은 헛소동</p>
+                <p>마루노우치 새디스틱, 오늘 밤은 헛소동</p>
                 <div class="portfolio-links">
                   <a href="../Kelly/assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="도쿄지헨"><i class="bx bx-plus"></i></a>
                 </div>
