--- a/Kelly/portfolio-details.html
+++ b/Kelly/portfolio-details.html
@@ -45,7 +45,7 @@
 
         <div class="row gy-4">
             <div class="portfolio-description">
-              <h2>내가 좋아하는 후지이 카제의 음악들</h2>
+              <h2>"내가 좋아하는 후지이 카제의 음악들"</h2>
 
               <p>후지이 카제는 일본의 싱어송라이터 이다. 그는 가수로서 데뷔를 하기 이전자신의 유투브 채널에 커버 영상들을 올렸었다.
               그의 커버들을 한 마디로 표현하자면 "자유롭다". 마치 그의 카제(바람)라는 이름과도 같다. 연주들이 틀에 매여 있지 않고
