--- a/Kelly/portfolio-details.html
+++ b/Kelly/portfolio-details.html
@@ -62,7 +62,7 @@
 
               2. 丸の内サディスティック(轢き逃げ)<br>
               <iframe width=100% height="315" src="https://www.youtube.com/embed/MXL9sQMjRSM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-              시이나 링고의 마루노우치 새디스틱을 커버한 영상이다.
+              시이나 링고의 마루노우치 새디스틱을 커버한 영상이다. 시이나 링고의 느낌을 색다르게 남성적으로 잘 표현하였다.
 
             </div>
           </div>
